<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_margin="16dp"
            android:background="@drawable/card_light"

            android:padding="16dp"
            android:elevation="64dp"

            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"

                android:fontFamily="@font/roboto_slab"
                android:text="@string/var_register"
                android:textAlignment="center"
                android:textColor="@color/kTitleTextColour"
                android:textSize="36sp" />

            <EditText
                android:id="@+id/nameBox"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"

                android:background="@drawable/edit_text_box"
                android:drawableEnd="@drawable/ic_person"
                android:drawableTint="@color/kTitleTextColour"

                android:fontFamily="@font/roboto_slab"
                android:hint="@string/var_firstname"
                android:inputType="textPersonName"
                android:textColor="@color/kTextColour"
                android:textColorHint="@color/kSubtextColour"

                android:textSize="16sp" />



            <EditText
                android:id="@+id/lastnameBox"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"

                android:background="@drawable/edit_text_box"
                android:drawableEnd="@drawable/ic_person"
                android:drawableTint="@color/kTitleTextColour"

                android:fontFamily="@font/roboto_slab"
                android:hint="@string/var_lastname"
                android:inputType="textPersonName"
                android:textColor="@color/kTextColour"
                android:textColorHint="@color/kSubtextColour"

                android:textSize="16sp" />

            <EditText
                android:id="@+id/emailBox"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"

                android:background="@drawable/edit_text_box"
                android:drawableEnd="@drawable/ic_email"
                android:drawableTint="@color/kTitleTextColour"

                android:fontFamily="@font/roboto_slab"
                android:hint="@string/var_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/kTextColour"
                android:textColorHint="@color/kSubtextColour"

                android:textSize="16sp" />

            <EditText
                android:id="@+id/passwordBox"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"

                android:background="@drawable/edit_text_box"
                android:drawableEnd="@drawable/ic_key"
                android:drawableTint="@color/kTitleTextColour"

                android:fontFamily="@font/roboto_slab"
                android:hint="@string/var_password"
                android:inputType="textPassword"
                android:textColor="@color/kTextColour"
                android:textColorHint="@color/kSubtextColour"

                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"

                android:orientation="horizontal"
                android:layout_weight="1"
                android:gravity="center"

                android:layout_marginTop="16dp">

                <Button
                    android:id="@+id/btn_back"

                    android:text="@string/var_back"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_weight="1"

                    android:layout_marginRight="8dp"

                    android:background="@drawable/edit_text_box"

                    android:gravity="center"/>

                <Button
                    android:id="@+id/btn_register"

                    android:text="@string/var_register"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_weight="1"

                    android:layout_marginLeft="8dp"

                    android:background="@drawable/edit_text_box"

                    android:gravity="center"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>