<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LauncherActivity">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:fontFamily="@font/roboto_slab"

        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/kTitleTextColour"
        android:textSize="60sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/lottieAnimationView" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/launch_animation" />

    <LinearLayout
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="bottom"
        android:orientation="horizontal"

        android:padding="16dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btn_register"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_weight="1"

            android:background="@drawable/edit_text_box"
            android:gravity="center"

            android:text="@string/var_register" />

        <Button
            android:id="@+id/btn_login"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"

            android:background="@drawable/edit_text_box"
            android:gravity="center"

            android:text="@string/var_login" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>