<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".PersonalActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@drawable/header_light"
        android:elevation="64dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/pic_profile"
            app:srcCompat="@drawable/ic_arrow_back" />

        <ImageView
            android:id="@+id/verified_tick"
            android:layout_width="25dp"
            android:layout_height="25dp"

            android:layout_alignTop="@+id/pic_profile"
            android:layout_alignEnd="@+id/pic_profile"
            android:elevation="80dp"

            android:src="@drawable/ic_verified"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/pic_profile"
            app:layout_constraintTop_toTopOf="@+id/pic_profile" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/pic_profile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"

            android:layout_centerHorizontal="true"

            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:src="@drawable/profile_pic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_slab"
            android:text="name"
            android:textAlignment="center"
            android:textColor="@color/kTitleTextColour"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@+id/pic_profile"
            tools:layout_editor_absoluteX="16dp" />

        <TextView
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:fontFamily="@font/roboto_slab"
            android:text="email"
            android:textAlignment="center"
            android:textColor="@color/kTitleTextColour"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/txt_name"
            tools:layout_editor_absoluteX="16dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <Button
                android:id="@+id/btn_picture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/edit_text_box"

                android:gravity="center"
                android:padding="16dp"
                android:text="@string/var_change_profile_picture" />

            <Button
                android:id="@+id/btn_specialization"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/edit_text_box"

                android:gravity="center"
                android:padding="16dp"
                android:text="Change specialization" />

            <Button
                android:id="@+id/btn_verify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/edit_text_box"

                android:gravity="center"
                android:padding="16dp"
                android:text="@string/var_verify_account" />

            <Button
                android:id="@+id/btn_logoff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/edit_text_box"

                android:gravity="center"
                android:padding="16dp"
                android:text="@string/var_log_off" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>